# topocalc

./: MANIFEST.in  pyproject.toml  requirements.txt  setup.py
topocalc/core_c/: topo_core.c
